修复找不到shell的问题

--- a/package/lib/systemd/system/deno-http-call.service
+++ b/package/lib/systemd/system/deno-http-call.service
@@ -7,6 +7,7 @@ After=network.target
 [Service]
 ExecStart=/usr/bin/deno run -A /usr/lib/deno-http-call/http-call.js start
 WorkingDirectory=/etc/deno-http-call
+Environment="SHELL=%s"
 Restart=on-failure
 
 [Install]
